apps/base/media/checkrr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkrr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: checkrr
  template:
    metadata:
      labels:
        app: checkrr
    spec:
      containers:
        - name: checkrr
          image: artifactory.local.hejsan.xyz/docker/aetaric/checkrr:3.6.1@sha256:c817e081e9397c240e5b13b09363fe26c9f94248489d3b4f0279e67495b1f12e
          ports:
            - containerPort: 8585
              name: http
          livenessProbe:
            httpGet:
              path: /api/stats/current
              port: 8585
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/stats/current
              port: 8585
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 2
          volumeMounts:
            - name: checkrr-config-volume
              mountPath: /etc/checkrr.yaml
              subPath: checkrr.yaml
            - name: shared-storage
              mountPath: /mnt/storage
            - name: checkrr-config-pvc
              mountPath: /checkrr-config/
          resources:
            limits:
              memory: 512Mi
              cpu: 250m
            requests:
              memory: 320Mi
              cpu: 100m
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: media-media-shared-nfs-pvc
        - name: checkrr-config-volume
          secret:
            secretName: checkrr-config
        - name: checkrr-config-pvc
          persistentVolumeClaim:
            claimName: checkrr-config-triple
