apps/base/media/checkrr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: checkrr

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`checkrr.${DOMAIN_INTERNAL}`)
      kind: Rule
      services:
        - name: checkrr
          port: http

  tls:
    secretName: ${CERT_SECRET_INTERNAL}
